Incorrect Content-Type for outgoing HTTP streams
When offering a HTTP stream, VLC always replies with the "Content-Type" header set to "application/octet-stream".
Apart from that mime type probably being incorrect for anything VLC ever streams, this causes problems when trying to embed a livestream in a web page.
Here's my wireshark log of Chromium attempting to access a webcam stream on localhost.
GET / HTTP/1.1
Host: localhost:8080
Connection: keep-alive
User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/535.19 (KHTML, like Gecko) Ubuntu/12.04 Chromium/18.0.1025.168 Chrome/18.0.1025.168 Safari/535.19
Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
Accept-Encoding: gzip,deflate,sdch
Accept-Language: de-DE,de;q=0.8,en-US;q=0.6,en;q=0.4
Accept-Charset: ISO-8859-1,utf-8;q=0.7,*;q=0.3
HTTP/1.0 200 OK
Content-type: application/octet-stream
Cache-Control: no-cache
.E..........B...B...B...B...B..webmB...B....S.g.............................................andsoonandsoon
If the mime type was set to "video/webm", chrome would probably play the file inside the browser.
This bug is present in Master Git VLC on Linux (Ubuntu 12.04 precise 64bit here)