httpd: add video/webm content type (fix #7208)